--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "@types/lodash": "^4.17.23",
     "canvas-confetti": "^1.9.4",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.29.0",
     "lodash": "^4.17.23",
     "lucide-react": "^0.294.0",
@@ -27,10 +28,10 @@
     "react-hot-toast": "^2.4.1",
     "react-joyride": "^2.9.3",
     "react-router-dom": "^6.20.0",
-    "recharts": "^2.10.3",
-    "xlsx": "^0.18.5"
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.46.0",
     "tsx": "^4.7.0",
     "typescript": "^5.2.2",
     "vite": "^7.3.1"
