--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build:prod": "tsc && vite build --mode production",
     "build:analyze": "tsc && vite build --mode production && npx vite-bundle-visualizer",
     "preview": "vite preview",
