Fix 404 errors and routing issues
- Remove missing favicon reference from index.html
- Update AdminDashboard to read tab from URL query parameters
- Fix Vercel routing configuration for client-side routing
- Add proper URL synchronization for admin dashboard tabs
- All routes now properly fall back to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,22 @@
   "framework": "vite",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot))",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
