Improve stale token detection with timeout and add cache-control to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -18,8 +18,17 @@
       }
     },
     {
+      "src": "/index.html",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate"
+      }
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate"
+      }
     }
   ]
 }
