--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 VITE_SUPABASE_URL=your_supabase_project_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
+# Optional: for admin to set/regenerate user passwords (development only; never expose in production client)
+# VITE_SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
 # Example:
 # VITE_SUPABASE_URL=https://abcdefghijklmnop.supabase.co
 # VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
