--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "canvas-confetti": "^1.9.4",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.29.0",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.23",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
